--- a/styles.css
+++ b/styles.css
@@ -90,8 +90,8 @@ article.rmdtable table th {
 }
 
 slides > slide {
-  background-image: url(images/usgs.png), url(images/simple-shadow.png), url(images/paper_fibers.png);
-  background-size: 150px, 35px, cover;
+  background-image: url(images/usgs.png), url(images/simple-shadow.png);
+  background-size: 150px, 35px;
   background-repeat: no-repeat;
   background-position: 3% 98%, 98% 98%;
 }
